fix(swap): fix dark mode visibility of slippage controls
Fixes brave/brave-browser#16749.

--- a/ui/app/css/itcss/components/swap.scss
+++ b/ui/app/css/itcss/components/swap.scss
@@ -658,6 +658,10 @@
 
           td {
             padding-top: 7px;
+
+            .btn--rounded.btn-primary {
+              background-color: #037dd6 !important;
+            }
           }
         }
 
